--- a/web/app/templates/sf_heatmap.html
+++ b/web/app/templates/sf_heatmap.html
@@ -6,20 +6,8 @@
   fill: #ffffff;
 }
 
-.W {
-  fill: #ffffff;
-}
-
-.B {
-  fill: #000000;
-}
-
-.P {
-  fill: #990099;
-}
-
-.Q {
-  fill: #00ff00;
+.dot {
+  fill: yellow;
 }
 
 .arrested {
@@ -31,7 +19,7 @@
 }
 
 .water {
-  fill: yellow;
+  fill: none;
 }
 
 .btract:hover {
@@ -78,16 +66,17 @@ body {
     background-color:rgba(68,136,187,0.7);;
     margin: 10px;
     width: 150px;
-    height: 180px;
+    height: 110px;
     padding-left: 10px;
     padding-top: 10px;
     -webkit-border-radius:10px;
     -moz-border-radius:10px;
     border-radius:10px;
+    font-size: .6em;
 }
 
 .map_tooltip.large {
-  height: 235px;
+  height: 120px;
 }
 
 .demo {
@@ -134,9 +123,24 @@ body {
 var heatmap_data = {};
 var demographics = {{ demographics|safe }};
 var income_map = {{ income|safe }};
-var map_max_prob = 2.5;
-d3.helper = {};
+var complaints_map = {{ complaints|safe }};
 
+function getID(tract) {
+  return tract.id;
+}
+
+function getBorough(tract) {
+  switch (tract.id.slice(0, 1)) {
+    case '1': return 'Manhattan';
+    case '2': return 'The Bronx';
+    case '3': return 'Brooklyn';
+    case '4': return 'Queens';
+    case '5': return 'Staten Island';
+  }
+}
+
+
+d3.helper = {};
 d3.helper.tooltip = function(accessor){
     return function(selection){
         var tooltipDiv;
@@ -203,21 +207,6 @@ d3.helper.tooltip = function(accessor){
     };
 };
 
-
-function getID(tract) {
-  return tract.id;
-}
-
-function getBorough(tract) {
-  switch (tract.id.slice(0, 1)) {
-    case '1': return 'Manhattan';
-    case '2': return 'The Bronx';
-    case '3': return 'Brooklyn';
-    case '4': return 'Queens';
-    case '5': return 'Staten Island';
-  }
-}
-
 var width = 900;
 var height = 500;
 var active = d3.select(null);
@@ -228,6 +217,8 @@ var active = d3.select(null);
 
 var initialScale = 11.26675381529667;
 var initialTranslate =  [-7188.913037857064, -7009.883754997407];
+var map_max_prob = 2.5;
+var currentScale = initialScale;
 
 /*
 If projection is null, the path uses the identity transformation, where the input geometry is not projected and is instead rendered directly in raw coordinates. This can be useful for fast rendering of already-projected geometry, or for fast rendering of the equirectangular projection.
@@ -329,12 +320,17 @@ function ready(error, ny) {
 
           var income = income_map[getID(d)];
           if (income && (income != 'N') && (income != '(X)') && (income != '-' )) {
-            str += "Income: $" + income;
+            str += "Income: $" + income + "<br>";
+          }
+          var year = getCurrentlySelectedDate().slice(-4);
+          var complaints = complaints_map[getID(d)][year - 2003];
+          if (complaints) {
+            str += year + " NYPD Complaints: " + complaints + "<br>";
           }
 
           var demogs = demographics[getID(d)];
           if (demogs) {
-            str += "<br><span class='demo_key'><span class='demo_0'>White:" + demogs[0] + "%</span><br><span class='demo_1'>Black:" + demogs[1] + "%</span><br><span class='demo_2'>Hispanic:" + demogs[2] + "%</span> <br><span class='demo_3'>Other:" + demogs[3] + "%</span></span>";
+            str += "Area Demographics:<br><span class='demo_key'><span class='demo_0'>White:" + demogs[0] + "%</span><span class='demo_1'>   Black:" + demogs[1] + "%</span><br><span class='demo_2'>Hispanic:" + demogs[2] + "%</span>    <span class='demo_3'>Other:" + demogs[3] + "%</span></span>";
           }
 
           return str;
@@ -394,8 +390,6 @@ function clicked(d) {
     url : url,
     type : 'GET',
     success : function(response) {
-      console.log(response);
-      console.log('rec');
       if (!response  || !response.success) {
         return;
       }
@@ -413,6 +407,7 @@ function clicked(d) {
 }
 
 function paintStops(data) {
+  g.selectAll('circle').remove()
   g.selectAll('circle')
     .data(data)
     .enter()
@@ -422,7 +417,7 @@ function paintStops(data) {
     })
     .attr('cx', function(d) {var proj =  projection([d.lon, d.lat]); return proj[0];})
     .attr('cy', function(d) {var proj = projection([d.lon, d.lat]); return proj[1];})
-    .attr('r', .1);
+    .attr('r', 3 / currentScale);
 }
 
 function getMouseCoords() {
@@ -431,19 +426,22 @@ function getMouseCoords() {
 }
 
 function reset() {
-  g.selectAll('circle').remove()
-
   active.classed("active", false);
   active = d3.select(null);
 
+  currentScale = initialScale;
   svg.transition()
     .duration(750)
     .call(zoom.translate(initialTranslate).scale(initialScale).event);
 }
 
 function zoomed() {
-  g.style("stroke-width", 1.5 / d3.event.scale + "px");
-  g.attr("transform", "translate(" + d3.event.translate + ") scale(" + d3.event.scale + ")");
+  currentScale = d3.event.scale;
+  g.style("stroke-width", 1.5 / currentScale + "px");
+  g.attr("transform", "translate(" + d3.event.translate + ") scale(" + currentScale + ")");
+
+  g.selectAll('circle')
+  .attr('r', 3 / d3.event.scale);
 }
 
 // If the drag behavior prevents the default click,
