--- a/writeup/css/grayscale.css
+++ b/writeup/css/grayscale.css
@@ -371,3 +371,18 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
+
+/* CUSTOM CHANGES */
+
+.full-map{
+    width: 700px;
+}
+
+.small-map{
+    width: 500px;
+}
+
+.img-center{
+    margin-left: auto;
+    margin-right: auto;
+}
