--- a/web/app/templates/sf_heatmap.html
+++ b/web/app/templates/sf_heatmap.html
@@ -42,17 +42,51 @@
   pointer-events: all;
 }
 
-.missing {fill:rgb(43, 62, 87);}
-.q0-10 { fill:rgb(205, 205, 205); }
-.q1-10 { fill:rgb(222,235,247); }
-.q2-10 { fill:rgb(198,219,239); }
-.q3-10 { fill:rgb(158,202,225); }
-.q4-10 { fill:rgb(107,174,214); }
-.q5-10 { fill:rgb(66,146,198); }
-.q6-10 { fill:rgb(33,113,181); }
-.q7-10 { fill:rgb(8,81,156); }
-.q8-10 { fill:rgb(8,48,107); }
-.q9-10 { fill:rgb(50, 3, 40);}
+.missing {
+  fill:rgb(43, 62, 87);
+  color:rgb(43, 62, 87);
+}
+.q0-10 {
+  fill:rgb(205, 205, 205);
+  color:rgb(205, 205, 205);
+}
+.q1-10 {
+  fill:rgb(222,235,247);
+  color:rgb(222,235,247);
+}
+.q2-10 {
+  fill:rgb(198,219,239);
+  color:rgb(198,219,239);
+}
+.q3-10 {
+  fill:rgb(158,202,225);
+  color:rgb(158,202,225);
+}
+.q4-10 {
+  fill:rgb(107,174,214);
+  color:rgb(107,174,214);
+}
+.q5-10 {
+  fill:rgb(66,146,198);
+  color:rgb(66,146,198);
+}
+.q6-10 {
+  fill:rgb(33,113,181);
+  color:rgb(33,113,181);
+}
+.q7-10 {
+  fill:rgb(8,81,156);
+  color:rgb(8,81,156);
+}
+.q8-10 {
+  fill:rgb(8,48,107);
+  color:rgb(8,48,107);
+}
+.q9-10 {
+  fill:rgb(50, 3, 40);
+  color:rgb(50, 3, 40);
+}
+
 
 .legend-text {
   fill: white;
@@ -406,8 +440,11 @@ function clicked(d) {
     .call(zoom.translate(translate).scale(scale).event);
 }
 
-function paintStops(data) {
+function clearStops() {
   g.selectAll('circle').remove()
+}
+function paintStops(data) {
+  clearStops();
   g.selectAll('circle')
     .data(data)
     .enter()
