--- a/web/app/templates/layout.html
+++ b/web/app/templates/layout.html
@@ -22,7 +22,9 @@ This is me trying to fool around with that and build something.
 </head>
 <body>
   <div id="header" class="page_div">
-    <h1>STOP AND FRISK DATA</h1>
+    <h1>STOP-AND-FRISK</h1>
+    <h4>Visualization & Analysis</h4>
+    <a href="/"><img id="logo" src="../static/img/callout.gif"/></a>
   </div>
   <div id="selection_div">
      {% include 'selection.html' %}
