shored up slider from server errors

--- a/web/app/templates/selection.html
+++ b/web/app/templates/selection.html
@@ -94,7 +94,7 @@
                     <option value="M">Man</option>
                 </select>
                 <span class="important identitext">I was
-                <span id="likelihood">how many</span> times as likely to be stopped & frisked as the average New Yorker in <span id="the_date"></span></span>
+                <span id="likelihood">how many</span><img style="display:none;"class="loader" src="../static/img/loading.gif"/> times as likely to be stopped & frisked as the average New Yorker in <span id="the_date"></span></span>
             </div>
         </div>
     </div>
