--- a/web/app/templates/timeline-graph.html
+++ b/web/app/templates/timeline-graph.html
@@ -82,7 +82,7 @@
 		.attr("y", 6)
 		.attr("dy", ".71em")
 		.attr('class', 'tick_text')
-		.text("Chance of Stop/Frisk");
+		.text("Total Selected S/F");
 
 	//http://bl.ocks.org/mbostock/3884955
 	function analyze(data){
