key for stop dots

--- a/web/app/templates/selection.html
+++ b/web/app/templates/selection.html
@@ -9,7 +9,7 @@
     <script src="http://gregfranko.com/jquery.selectBoxIt.js/js/jquery.selectBoxIt.min.js"></script>
 </head>
 
-<body onload="selection_init()">
+<body>
     <div id="full_selection">
         <div class="flex" id="selection_content">
             <div id="identity" class="identitext">
