--- a/web/app/static/css/layout.css
+++ b/web/app/static/css/layout.css
@@ -54,10 +54,7 @@ body{
 }
 
 #timeline-graph_div{
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 10px;
-	width: 75%;
+	text-align: center;
 }
 
 #animate_button{
