--- a/web/app/static/css/selection.css
+++ b/web/app/static/css/selection.css
@@ -7,12 +7,15 @@
 #selection_div.fixed {
   top: 0px;
   position: fixed;
+  padding:10px;
   /* This is a hack which enables hardware acceleration*/
   -webkit-transform: translate3d(0,0,0);
 }
 
 #selection_div {
   background: rgb(43, 62, 87);
+
+  padding:10px;
   
   position: absolute;
   bottom: 0px;
